plugins {
    id 'java'
}

allprojects {
    group 'com.atzuche'
    version '0.0.1-SNAPSHOT'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenCentral()
        maven{url "http://10.0.3.208:8081/nexus/content/groups/public/"}
        maven{url "http://maven.aliyun.com/nexus/content/groups/public/"}

    }

}


// 子模块/项目的统一配置
subprojects {
    apply plugin: 'java'

    // 指定编码格式
    [compileJava,compileTestJava,javadoc]*.options*.encoding = 'UTF-8'
    ext {//依赖版本
        springBootVersion = "1.5.21.RELEASE"
        mysqlConnectorVersion = "8.0.13"
        mybatisStarterVersion = "1.3.2"
        fastjsonVersion = "1.2.54"
    }
    dependencies {
        compile("javax.servlet:javax.servlet-api:4.0.1")
        compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
        // Mybatis
        compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:$mybatisStarterVersion")
        // JDBC Driver
        compile("mysql:mysql-connector-java:$mysqlConnectorVersion")
        // JSON
        compile("com.alibaba:fastjson:$fastjsonVersion")
        // Apache Commons
        compile("org.apache.commons:commons-lang3:3.8.1")
        compile('org.projectlombok:lombok:1.18.8')
        annotationProcessor 'org.projectlombok:lombok:1.18.8'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
        testCompileOnly 'org.projectlombok:lombok:1.18.8'
        // 单元测试
        testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
        testCompile("junit:junit:4.12")
        


        compile "com.autoyol:auto-web-starter:1.0-SNAPSHOT"
        compile 'org.springframework.boot:spring-boot-starter-web'
        compile('org.springframework.boot:spring-boot-starter-actuator')
        compile('org.springframework.boot:spring-boot-starter-aop')
//	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        compile 'org.springframework.cloud:spring-cloud-starter-sleuth'
        compile("com.autoyol.tools:prop-encrypt-spring-boot-starter:0.0.1-SNAPSHOT")
        /* compile('mysql:mysql-connector-java')*/
        compile('com.ctrip.framework.apollo:apollo-client:0.11.0-SNAPSHOT')
    	compile("com.autoyol:cat-starter:0.0.1-SNAPSHOT")
//	compile('org.springframework.boot:spring-boot-starter-data-redis')
        /*testCompile 'org.springframework.boot:spring-boot-starter-test'
        compile("com.autoyol:auto-doc:1.0-SNAPSHOT"){
            exclude module:'servlet-api'
        }*/
//        compile('org.springframework.boot:spring-boot-starter-amqp')
        compile 'org.springframework.amqp:spring-rabbit:1.7.13.RELEASE'
        compile 'net.sf.json-lib:json-lib:2.4:jdk15'
        //compile 'org.apache.httpcomponents:httpclient:4.3.5'
        //compile 'org.apache.httpcomponents:httpcore:4.4.12'
        //compile 'com.netflix.feign:feign-httpclient:8.15.1'
    }
 
}